--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "astro": "^4.11.3",
     "typescript": "^5.5.3",
     "vite": "^5.3.2"
+  },
+  "devDependencies": {
+    "@types/node": "^20.14.9"
   }
 }
